# code

./: .gitignore  README.md  install_windows.bat  pyproject.toml  run_windows.bat
app/: main.py
app/api/: routes.py
app/core/: settings.py
app/db/: session.py
app/models/: __init__.py  supply.py  workflow.py
app/schemas/: __init__.py  supply.py  workflow.py
app/services/: audit.py  auth.py  budget.py  charts.py  dashboard.py  files.py  imports.py
app/web/: app.js  index.html  styles.css
scripts/: install_windows.bat  run_windows.bat
tests/: test_api.py
